<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    
    <string name="app_name">Расписание РГУПС</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    
    <!-- TOASTS -->
    
    <string name="main_loading_begin">Загрузка начата</string>
    <string name="main_loading_sucses">Загрузка выполнена успешно</string>
    <string name="main_loading_fail">Загрузка неудалась</string>
        
    
    
    <!-- DRAWER -->
    <string name="drawer_time">Расписание</string>
    <string name="drawer_homework">Домашнии задания</string>
    <string name="drawer_teachers">Преподаватели</string>
    <string name="drawer_setting">Настройки</string>
    <!-- ACTION MENUS -->
    <string name="action_scroll_to_today">Сегодня</string>
    <string name="action_done">Готово</string>
	<string name="action_add_homework">Добаваить ДЗ</string>    
	<string name="action_add_image">Добаваить изображение</string>    
	<string name="action_save">Сохранить</string>    
	<string name="action_delete">Удалить</string>
	<string name="search_view_title">Преподаватель</string>
	<string name="search_view_hint">Введите фамилию преподавателя</string>
	
	<!-- DIALOGs -->
	
	<string name="progress_message">Подождите</string>
	<string name="ok_caption">Ок</string>
	<string name="positive_caption">Да</string>	
	<string name="negative_caption">Нет</string>
	<string name="homework_delete_message">Вы действительно хотите удалить это домашнее задание?</string>
 	<string name="full_download_message">
 	    Раздел "Преподаватели" предоставляет информацию о преподавателях,
 	    обущающих студентов выбранного вами факультета. Чтобы получить полный список преподавателей, 
 	    необходимо запросить с сервера полное расписание университета. Запрос всего расписания выполняется в фоне
 	    и может занять 
 	    несколько минут, рекомендуется наличие быстрого интернет-соединения. 
 	    Вы желаете выполнить этот запрос?(запрос можно выполнить позже, в разделе "Настройки")
 	    
 	</string>
 	
 	<string name="setting_full_download_message">
		Запрос всего расписания выполняется в фоне
 	    и может занять 
 	    несколько минут, рекомендуется наличие быстрого интернет-соединения. 
 	    Вы желаете выполнить этот запрос?
 	    
 	</string>
 	
 	<string name="about_dialog_massage">
 	    Данное приложение было разработано Ткаченко Артёмом, 
 	    студентом группы АВМ-024, в рамках дипломной работы.\n
 	    \n
 	    Благодарности: Хлопину Константину, Жижанову Андрею.
 	</string>
 	
 	<string name="version_caption">Расписание РГУПС v#</string>
 	
 	<string name="logout_dialog_message">
 	    Вы уверены, что хотите сменить группу?
 	</string>
 	
	
	<!-- DRAWER -->
    <string name="draw_open">Меню</string>
    <string name="draw_close">Расписание</string>
    
    <!-- Captions -->
    <string name="lesson_empty_view">Пар нет</string>
    <string name="group_list_divider">#-й курс</string>
    <string name="lesson_list_divider">#-ая пара</string>
    
    <string name="welcome_screen_caption">
        Настоящий органайзер для студента РГУПС
    </string>
    <string name="photo_count">Фотографий:</string>
    <string name="about">О приложении</string>
    <string name="login_button_caption">Начать работу</string>
    <string name="login_facultet_caption">Выберите факултет</string>
    <string name="login_group_caption">Выберите группу</string>
    
    <string name="setting_full_time_button">Скачать всё</string>
    <string name="setting_logout">Сменить группу</string>
    
    <string name="setting_staff">Общее</string>
    <string name="hw_empty">Домашних заданий нет</string>
    <string name="home_work_hint">Домашнее задание</string>
    <string name="home_work_caption">Домашние задание</string>
    
</resources>
